--- a/Reranking/Reranking.ipynb
+++ b/Reranking/Reranking.ipynb
@@ -1,8 +1,20 @@
 {
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {},
+      "source": [
+        "# RAG with Reranking\n",
+        "This notebook demonstrates document reranking using Cohere's API."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "install_packages"
+      },
+      "outputs": [],
       "source": [
         "# Install required packages\n",
         "%pip install cohere sentence_transformers chromadb"
@@ -10,7 +22,11 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "import_libraries"
+      },
+      "outputs": [],
       "source": [
         "# Import libraries\n",
         "import cohere\n",
@@ -20,7 +36,11 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "setup_api"
+      },
+      "outputs": [],
       "source": [
         "# Set up API keys and clients\n",
         "# cohere_api_key = 'YOUR_API_KEY'\n",
@@ -29,7 +49,11 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "define_docs"
+      },
+      "outputs": [],
       "source": [
         "# Define documents\n",
         "documents = [\n",
@@ -40,7 +64,11 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "create_embeddings"
+      },
+      "outputs": [],
       "source": [
         "# Create embeddings\n",
         "embedding_model = SentenceTransformer('all-MiniLM-L6-v2')\n",
@@ -49,7 +77,11 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "setup_vectorstore"
+      },
+      "outputs": [],
       "source": [
         "# Set up vector store\n",
         "client = chromadb.Client()\n",
@@ -63,7 +95,11 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "query_docs"
+      },
+      "outputs": [],
       "source": [
         "# Query and retrieve documents\n",
         "query = \"Your query here\"\n",
@@ -76,7 +112,11 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "rerank_docs"
+      },
+      "outputs": [],
       "source": [
         "# Rerank retrieved documents\n",
         "# reranked_results = co.rerank(\n",
@@ -89,15 +129,28 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": [],
+      "collapsed_sections": []
+    },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.0"
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 5
 }
-// filepath: c:\Users\Ananya Roy\Documents\AI learning\python files\notebooks\RAG_ipynb_files\Reranking\Reranking.ipynb
